lab1/Test/L1-A-6-48.output
Error Type B at Line 2
Error Type A at Line 4
Error Type B at Line 5
Error Type B at Line 7
Error Type A at Line 9
Error Type A at Line 10
Error Type A at Line 10
Error Type B at Line 14
Error Type B at Line 14
