lab1/Test/L1-A-6-48.cmm
float QtCzSNhST4eh ( int DKcphj1owCBveqZ7 [ 996280826 
  ] [ 1188477425 ] [ 1725489009 ] [ ] [ 636162197 ] 
  [ 1198612854 ] [ 621448834 ] [ 224488285 ] ) {
  int jciQO6ewuEc %;
  int b [ 1581855331 ] , YsrN9O0zTyAS4v0zwXK , ;
  if ( wwqSwnChK ( zSWqv55cenN33X ) . PM294n - NL_Tj4nME 
    >= SZB1iLvubmOURCOk < != BwkGoD1vSE0 < JocAkJA1OXQBi3H493V 
    != jyngWix2Ah88nZ2sxj != CA7z57H9Sh < Q != rVgJi0 
    && mxuA && S6jHajgULA )   hxXA \;
else   if ( cF ) $  NWEvCiLlNCK8 ^;


}
return < 